Fixed gap between activity card and connected line
TG-190
There is a gap between the green line connected to the card of an activity

--- a/src/app/dashboard/activities/list-activities/activities.component.sass
+++ b/src/app/dashboard/activities/list-activities/activities.component.sass
@@ -11,7 +11,7 @@
   &:before
     border-left: 2px solid $cornflowerBlue
     content: ''
-    height: 25%
+    height: 10%
     position: absolute
     z-index: -1
 
